--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@
 resume/**/*.pdf
 resume/**/*.docx
 dist/
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
