--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,13 @@ jobs:
       - name: Install TeX & Pandoc
         run: |
           sudo apt-get update
-          sudo apt-get install -y             texlive-latex-recommended texlive-latex-extra             texlive-fonts-recommended texlive-fonts-extra             texlive-xetex latexmk pandoc
+          sudo apt-get install -y \
+            texlive-latex-recommended texlive-latex-extra \
+            texlive-fonts-recommended texlive-fonts-extra \
+            texlive-xetex latexmk pandoc
+          # Ensure fontawesome5 is available
+          sudo tlmgr update --self || true
+          sudo tlmgr install fontawesome5 || true
       - name: Build (PDF + DOCX)
         run: make all
       - name: Package (date + git hash tarballs)
