--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,46 @@ jobs:
           else
             make pdf-${{ matrix.pack }} docx-${{ matrix.pack }}
           fi
+        continue-on-error: true
+        id: build_step
+
+      - name: Capture LaTeX logs on failure
+        if: failure() && steps.build_step.outcome == 'failure'
+        run: |
+          echo "📋 Capturing LaTeX log files..."
+          find resume -name "*.log" -type f -exec echo "=== {} ===" \; -exec cat {} \;
+
+      - name: Upload LaTeX logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: latex-logs-${{ matrix.pack }}
+          path: resume/**/*.log
+          if-no-files-found: warn
+
+      - name: Fail if build failed
+        if: steps.build_step.outcome == 'failure'
+        run: exit 1
+        continue-on-error: true
+        id: build_step
+
+      - name: Capture LaTeX logs on failure
+        if: failure() && steps.build_step.outcome == 'failure'
+        run: |
+          echo "📋 Capturing LaTeX log files..."
+          find resume -name "*.log" -type f -exec echo "=== {} ===" \; -exec cat {} \;
+
+      - name: Upload LaTeX logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: latex-logs-${{ matrix.pack }}
+          path: resume/**/*.log
+          if-no-files-found: warn
+
+      - name: Fail if build failed
+        if: steps.build_step.outcome == 'failure'
+        run: exit 1
       - name: Package ${{ matrix.name }}
         run: |
           if [ "${{ matrix.pack }}" = "main" ]; then
